@@ -132,6 +132,7 @@ allcategories.title=Kategorier
 allfiles.title=All filer
 allimages.title=Alle billeder
 alltopics.title=Alle emner
+allusers.title=All Users
 common.add=Tilf\u00F8j
 common.back=Tilbage
 common.cancel=Fortryd
