@@ -132,6 +132,7 @@ allcategories.title=Kateg\u00F3ri\u00E1k
 allfiles.title=Minden f\u00E1jl
 allimages.title=Minden k\u00E9p
 alltopics.title=\u00D6sszes sz\u00F3cikk
+allusers.title=All Users
 common.add=Hozz\u00E1ad
 common.back=Vissza
 common.cancel=M\u00E9gse
