@@ -132,6 +132,7 @@ allcategories.title=Categories
 allfiles.title=All Files
 allimages.title=All Images
 alltopics.title=All Topics
+allusers.title=All Users
 common.add=Aggiungi
 common.back=Indietro
 common.cancel=Annulla
