@@ -132,6 +132,7 @@ allcategories.title=Categorie\u00EBn
 allfiles.title=Alle bestanden
 allimages.title=Alle afbeeldingen
 alltopics.title=Alle onderwerpen
+allusers.title=All Users
 common.add=Voeg toe
 common.back=Terug
 common.cancel=Annuleer
