@@ -132,6 +132,7 @@ allcategories.title=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0456\u0457
 allfiles.title=All Files
 allimages.title=All Images
 alltopics.title=\u0412\u0441\u0456 \u0441\u0442\u0430\u0442\u0442\u0456
+allusers.title=All Users
 common.add=\u0414\u043E\u0434\u0430\u0442\u0438
 common.back=\u041D\u0430\u0437\u0430\u0434
 common.cancel=\u0421\u043A\u0430\u0441\u0443\u0432\u0430\u0442\u0438
