@@ -447,6 +447,10 @@ STATEMENT_SELECT_WIKI_USER_PASSWORD = \
     and encoded_password = ?
 STATEMENT_SELECT_WIKI_USER_SEQUENCE = \
     select max(wiki_user_id) as wiki_user_id from jam_wiki_user
+STATEMENT_SELECT_WIKI_USERS = \
+    select login from jam_wiki_user_info \
+    order by login \
+    limit ? offset ?
 STATEMENT_UPDATE_TOPIC = \
     update jam_topic set \
     virtual_wiki_id = ?, \
