@@ -136,3 +136,11 @@ STATEMENT_SELECT_WIKI_USER_CHANGES_LOGIN = \
     as jam_recent_change \
     where rownum > ? and rownum <= ? \
     order by rownum 
+STATEMENT_SELECT_WIKI_USERS = \
+    select * from ( \
+      select login, rownumber() over (order by login) as rownum \
+      from jam_wiki_user_info \
+    ) \
+    as jam_wiki_user_info \
+    where rownum > ? and rownum <= ? \
+    order by rownum 
