@@ -6,6 +6,7 @@ New Features:
 
   * Upgrade to commons-dbcp-1.2.2.jar.
   * Upgrade to Lucene Search 2.1.
+  * Add Special:Userlist page to display a list of all wiki users.
   
 Bugfixes:
 
